attempted fix to article header alignment

--- a/_source/assets/css/default.css
+++ b/_source/assets/css/default.css
@@ -4353,10 +4353,6 @@ body:not(.scroll-top) .type-article .article-header {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
         -ms-flex-pack: center;
