--- a/_source/assets/sass/pages/_article_full.scss
+++ b/_source/assets/sass/pages/_article_full.scss
@@ -187,7 +187,7 @@ html, body {
 					height:100%;
 
 					display:flex;
-					align-items: center;
+					//align-items: center;
 					justify-content: center;
 					flex-direction: column;
 
